# onnx2fmu

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  environment.yml  fmusim  pyproject.toml
.github/workflows/: buil_branches.yml  build.yml  release.yml
examples/: README.md
examples/example1/: Example1_in.csv  Example1_ref.csv  example1.onnx  example1Description.json  generate-example-model.ipynb
examples/example1/Example1FMU/: modelDescription.xml
examples/example1/Example1FMU/resources/: model.onnx
examples/example1/Example1FMU/sources/: config.h  model.c
examples/example2/: Example2_in.csv  Example2_ref.csv  example2.onnx  generate-example-model.ipynb
examples/example2/Example2FMU/: modelDescription.xml
examples/example2/Example2FMU/sources/: config.h  model.c
examples/example3/: example3.pt  generate-example-model.ipynb
examples/example3/Example3FMU/: modelDescription.xml
examples/example3/Example3FMU/sources/: config.h  model.c
examples/example4/: example4Description.json  example4DescriptionFMI3.json  generate-example-model.ipynb
examples/example4/Example4FMI2/: modelDescription.xml
examples/example4/Example4FMI2/sources/: config.h  model.c
include/: ortUtils.h
onnx2fmu/: CMakeLists.txt  app.py  model.py  model_description.py  variables.py
onnx2fmu/include/: model.h
onnx2fmu/src/: cosimulation.c  ortUtils.c
onnx2fmu/template/: FMI2.xml  FMI3.xml  config.h  model.c
onnx_models/: Small_MinMaxScaler_adaptive.onnx  gasifier.onnx  stand_model.onnx  sum.onnx  tiny_model.onnx
onnx_models/simcenter/: rom_1.onnx
src/: ortUtils.c
template/: FMI2.xml  FMI3.xml  buildDescription.xml  config.h  model.c
tests/: test_app.py  test_full.py  test_model.py  test_model_description.py  test_variables.py
tests/example1/: example1.onnx  example1Description.json  generate-example-model.ipynb  input.csv  output.csv
tests/example3/: example3.onnx  example3.pt  generate-example-model.ipynb  input.csv  loss.csv  predictions.csv
tests/example4/: example4.onnx  example4Description.json  generate-example-model.ipynb  input.csv
tests/resources/: RDFrampup-CH10-CO1.5-input.csv  RDFrampup-CH10-CO1.5-output.csv  RDFrampup-CH10-CO1.5.csv  example1.onnx  ga1rampup-ch5-co1.5.csv  generate-example-model.ipynb  sum.csv
